# HINGE

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  build.sh  default.nix  licence.txt  paramater_description.md  parameter_description.md  requirements.nix  requirements_frozen.txt  setup.sh  shell.nix  test.sh  update.sh
data/: greedy.ini
demo/NCTC9657_demo/: run.sh  run_racon_consensus.sh
demo/ecoli_P4_demo/: run.sh
demo/ecoli_demo/: run.sh  run_norevcomp.sh  run_racon_consensus.sh
demo/ecoli_nanopore/: run.sh
demo/yeast_W303_demo/: nominal.ini  run.sh
docker/: README.md
docker/centos6/: Dockerfile
docker/ubuntu/: Dockerfile
docker/ubuntu12/: Dockerfile
docker/ubuntu14/: Dockerfile
scripts/: NCTC9657M.G2.graphml  Visualise_graph.py  add_groundtruth.py  add_groundtruth_json.py  analyse2.py  clip_ends.py  compute_n50_ECCB.py  compute_n50_from_draft.py  condense_graph.py  condense_graph_and_annotate.py  condense_graph_annotate_clip_ends.py  condense_graph_create_gfa_compute_n50.py  condense_graph_create_gfa_compute_n50_2.py  condense_graph_create_gfa_compute_n50_old.py  condense_graph_with_gt.py  connected.py  correct_head.py  create_bandage_file.py  create_hgraph.py  create_hgraph2.py  create_hgraph_nogt.py  dfs.py  download_NCTC_pipeline.py  draft_assembly.py  draft_assembly_not_perfect.py  draw.py  draw2.py  draw2_pileup.py  draw2_pileup_region.py  draw2_pileup_w_repeat.py  draw_hinge_pileups.py  draw_pileup_region.py  draw_pileup_region_find_bridges.py  eulerian_resolution.py  fasta_to_fastq.py  get_NCTC_json.py  get_all_alignments_test.py  get_consensus_gfa.py  get_draft_annotation.py  get_draft_path.py  (+45 more)
src/: CMakeLists.txt  Circular_consensus.cpp  DB.c  DB.h  DBshow.c  DenovoQV.cpp  DenovoSV.cpp  Draft_assembly.cpp  Draft_assembly.obesolete3.cpp  Draft_assembly.obsolete.cpp  Draft_consensus.cpp  Falcon_test.cpp  Gap_closer.cpp  Greedy_best_ovl.cpp  Greedy_best_ovl_bursty_resistant.cpp  Greedy_best_ovl_bursty_resistant.obesolete.cpp  Greedy_shortest_ext.cpp  LA4Falcon.c  LAInterface.cpp  LAInterface.h  LAInterface_consensus_test.cpp  LAInterface_test.cpp  LAInterface_test_2DB.cpp  LAmerge.c  LAshow.c  NSG_v1.cpp  NSG_v2.cpp  NSG_v3.cpp  OverlapGraph.cpp  OverlapGraph.h  QV.h  Swiss_cheese_scrubber.cpp  To do  ToDo  Unitig_consensus.cpp  align.c  align.h  common.h  falcon.c  falcon_utils.c  (+8 more)
src/consensus/: CMakeLists.txt  Draft_consensus.cpp  Unitig_consensus.cpp  consensus.cpp  draft.cpp  draft_chopper.cpp  io_base.cpp
src/filter/: CMakeLists.txt  filter.cpp
src/include/: LAInterface.h  OverlapGraph.h  common.h  paf.h
src/layout/: CMakeLists.txt  NSG.cpp  NSG_v2.cpp  hinging.cpp
src/lib/: CMakeLists.txt  DW_banded.c  LAInterface.cpp  align.c  falcon.c  falcon_utils.c  paf.c
src/maximal/: CMakeLists.txt  maximal.cpp
src/test/: CMakeLists.txt  Falcon_test.cpp  LAInterface_consensus_test.cpp  LAInterface_test1.cpp  LAInterface_test_2DB.cpp
utils/: build.sh  clean.sh  compile.sh  nominal.ini  run.sh  setup.sh  update.sh
